20230206 - add jam buka dan jam tutup #penantianlama

--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -13,6 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:id="@+id/txtTidak"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tidak ada transaksi"
+        android:textColor="@color/black"
+        android:fontFamily="@font/ralewayregular"
+        android:gravity="center"/>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_home"
         android:layout_width="wrap_content"
