--- a/app/src/main/res/layout/activity_edit_laundry.xml
+++ b/app/src/main/res/layout/activity_edit_laundry.xml
@@ -111,10 +111,73 @@
                     android:id="@+id/txtLaunAddress"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@drawable/edittextshape"
                     android:hint="Alamat"
                     android:fontFamily="@font/ralewayregular"
                     android:paddingLeft="8dp" />
+
+                <LinearLayout
+                    android:id="@+id/layoutJam"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:orientation="vertical"
+                    android:paddingLeft="12dp"
+                    android:background="@drawable/backgroundeditlaundry"
+                    android:gravity="center_vertical">
+
+                    <LinearLayout
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/txtJamBuka"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Jam buka:"
+                                android:textSize="16dp"
+                                android:textColor="@color/black"
+                                android:fontFamily="@font/ralewayregular"
+                                android:buttonTint="@color/blue"/>
+
+                            <TextView
+                                android:id="@+id/editJamBuka"
+                                android:layout_width="match_parent"
+                                android:layout_height="32dp"
+                                android:text="@string/jamBuka"
+                                android:fontFamily="@font/ralewayregular"
+                                android:clickable="true"/>
+
+                            <TextView
+                                android:id="@+id/txtJamTutup"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Jam tutup:"
+                                android:textSize="16dp"
+                                android:textColor="@color/black"
+                                android:fontFamily="@font/ralewayregular"
+                                android:buttonTint="@color/blue"/>
+
+                            <TextView
+                                android:id="@+id/editJamTutup"
+                                android:layout_width="match_parent"
+                                android:layout_height="32dp"
+                                android:text="@string/jamTutup"
+                                android:fontFamily="@font/ralewayregular"
+                                android:clickable="true"/>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
